@@ -1,3 +1,0 @@
-recursive-include tests *.py *.txt
-
-include MANIFEST.in LICENSE README TODO NEWS Makefile setup.cfg test
