@@ -19,7 +19,8 @@ installation_dir=ubuntu
 arch=i386
 name=Ubuntu
 packages=ubuntu-desktop
-metalink=http://releases.ubuntu.com/9.04/ubuntu-9.04-desktop-i386.metalink
+#metalink=http://releases.ubuntu.com/9.04/ubuntu-9.04-desktop-i386.metalink
+metalink=http://cdimage.ubuntu.com/releases/jaunty/alpha-6/jaunty-desktop-i386.metalink
 metalink2=http://cdimage.ubuntu.com/daily-live/current/jaunty-desktop-i386.metalink
 website=http://www.ubuntu.com
 ordering=1
@@ -28,7 +29,8 @@ ordering=1
 arch=amd64
 name=Ubuntu
 packages=ubuntu-desktop
-metalink=http://releases.ubuntu.com/9.04/ubuntu-9.04-desktop-amd64.metalink
+#metalink=http://releases.ubuntu.com/9.04/ubuntu-9.04-desktop-amd64.metalink
+metalink=http://cdimage.ubuntu.com/releases/jaunty/alpha-6/jaunty-desktop-amd64.metalink
 metalink2=http://cdimage.ubuntu.com/daily-live/current/jaunty-desktop-amd64.metalink
 website=http://www.ubuntu.com
 ordering=1
